# flirmulticamera

./: .gitignore  CMakeLists.txt  Citation.cff  Readme.md  build_install.sh
cfg/: 1024x768.json  2048x1536.json  CameraSettings.Schema.json
examples/: CMakeLists.txt
examples/apps/: get_images.py  stream_synced_videos.cpp  synchronized_frame.cpp  synchronized_videos.cpp
include/flirmulticamera/: FlirCamera.h  OnlineEncoder.h  config_parser.h  fcambindings.h  hardware_constants.h  videoIO.h
outputs/: .gitignore
src/: FlirCamera.cpp  OnlineEncoder.cpp  bindings.cpp  config_parser.cpp  fcambindings.cpp  videoIO.cpp
src/apps/: get_images.py  synchronized_frame.cpp  synchronized_videos.cpp
